# deepin-remote-desktop

./: .gitignore  CLAUDE.md  README.md  meson.build
.codex/: AGENTS.md
.codex/plan/: architecture-modern-rdp.md  keyboard-scancode.md  libfreerdp_callbacks.md  rdp-security-overview.md  system-handover.md  video-frame-push-analysis.md
config/: deepin-remote-desktop.service  default-pam-system.ini  default-system.ini  default-user.ini  default.ini
data/: 11-deepin-remote-desktop-handover  deepin-remote-desktop-handover.service  deepin-remote-desktop-system.service  deepin-remote-desktop-user.service  meson.build  org.deepin.RemoteDesktop1.conf
data/config.d/: default-handover.ini  default-pam-system.ini  default-system.ini  default-user.ini  full-example.ini
debian/: changelog  control  deepin-remote-desktop.docs  deepin-remote-desktop.install  rules
doc/: TODO.md  architecture.md  changelog.md  collect_dirty_rects.md  record.md  概要设计.typ  概要设计说明书url.md  远程桌面概要设计.typ  远程桌面概要设计说明书.docx
doc/old/: 远程桌面概要设计.typ
doc/remmina/: change_notes.md  compatibility.md
doc/uml/: deepin-remote-desktop.puml  deepin-remote-structure.puml  key-data-structures.puml
src/: drd_build_config.h.in  main.c  meson.build  org.deepin.DisplayManager.xml  org.deepin.RemoteDesktop.new.xml  org.deepin.RemoteDesktop.xml
src/capture/: CLAUDE.md  drd_capture_manager.c  drd_capture_manager.h  drd_x11_capture.c  drd_x11_capture.h
src/core/: CLAUDE.md  drd_application.c  drd_config.c  drd_config.h  drd_dbus_constants.h  drd_encoding_options.h  drd_server_runtime.c  drd_server_runtime.h  drd_user_dbus_service.c  drd_user_dbus_service.h  grdc_application.c  grdc_config.c  grdc_config.h  grdc_encoding_options.h  grdc_server_runtime.c  grdc_server_runtime.h
src/encoding/: CLAUDE.md  drd_encoding_manager.c  drd_encoding_manager.h  drd_raw_encoder.c  drd_rfx_encoder.c  drd_rfx_encoder.h  grdc_encoding_manager.c  grdc_encoding_manager.h  grdc_rfx_encoder.c  grdc_rfx_encoder.h
src/input/: CLAUDE.md  drd_input_dispatcher.c  drd_x11_input.c
src/security/: CLAUDE.md  drd_local_session.c  drd_local_session.h  drd_pam_auth.c  drd_pam_auth.h  drd_tls_credentials.c  drd_tls_credentials.h  grdc_nla_sam.c  grdc_nla_sam.h  grdc_tls_credentials.c
src/session/: CLAUDE.md  drd_rdp_graphics_pipeline.c  drd_rdp_graphics_pipeline.h  drd_rdp_session.c  drd_rdp_session.h  grdc_rdp_session.c
src/system/: CLAUDE.md  drd_handover_daemon.c  drd_system_daemon.c  drd_system_daemon.h
src/transport/: CLAUDE.md  drd_rdp_listener.c  drd_rdp_listener.h  drd_rdp_routing_token.c  drd_rdp_routing_token.h  grdc_rdp_listener.c  grdc_rdp_listener.h
src/utils/: CLAUDE.md  drd_dbus_auth_token.c  drd_dbus_auth_token.h  drd_encoded_frame.c  drd_encoded_frame.h  drd_frame.c  drd_frame_queue.c  drd_frame_queue.h  drd_log.c  drd_log.h
